--- a/styles.css
+++ b/styles.css
@@ -217,17 +217,21 @@ border-radius: 2px;
 }
 
 .about-col-1 {
-    flex: 1;
-    padding-right: 2rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 10px;
 }
 
 .about-col-1 img {
-    width: 120px; /* Adjust to your desired size */
-    height: auto; 
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     object-fit: cover;
     border: 4px solid #00bcd4;
+    margin: 0;
 }
+
 
 .about-col-2 {
     flex: 2;
